'   UCF COP3330 Summer 2021 Assignment 5 Solution
'   Copyright 2021 rielly donnell

@startuml
'https://plantuml.com/class-diagram

App -- AppModel
AppModel -- AppController
AppModel -- Inventory
Inventory -- Item

class App {
    root: Parent
    scene: Scene

    main()
    start()
}

class AppController {
    appModel: AppModel
    fileChooser: FileChooser

    tableView: TableView
    colName: TableColumn<Item, String>
    colSerialNumber: TableColumn<Item, String>
    colValue: TableColumn<Item, Double>

    lblAddInventoryItem: Label

    txtSearch: TextField
    txtNewItemName: TextField
    txtNewItemSerialNumber: TextField
    txtNewItemValue: TextField

    btnAdd: Button
    btnLoad: Button
    btnSave: Button
    txtSearch: TextField
    btnSearch: Button

    btnAddClicked()
    btnSearchClicked()

    initialize()

    loadList()
    getListForTable()

    validateName()
    validateSerialNumber()
    duplicateSerialAlert()
    validateValue()

    deleteRow()

    btnLoadClicked()
    btnSaveClicked()

}

class AppModel {
    inventory: Inventory

    getInventory()
    setInventory()

    getTSV()
    getHTML()
    getJSON()

    loadFile()
    loadTSV()
    loadHTML()
    loadJSON()
}

class Inventory {
    items: Set

    getItems()
    setItems()

    addItem()
    removeItem()
    removeItemBySN()
}

class Item {
    name: SimpleStringProperty
    serialNumber: SimpleStringProperty
    value: SimpleDoubleProperty

    getName()
    getSerialNumber()
    getValue()

    setName()
    setSerialNumber()
    setValue()
}

@enduml